src/tests/functionality/assignment_3_io_arrays_comments/valid/06_mandatory_array_initializer_2d_exact_shape.c
int main() {
    int other[3][4] = {{1, 2, 6, 93}, {4, 5, 6, 7}, {8, 9, 10, 11}};
    return other[2][3];
}
