src/tests/functionality/assignment_3_io_arrays_comments/invalid_semantic/13_mandatory_array_argument_type_check.c
int first(int values[3]) {
    return values[0];
}

int main() {
    float wrong[3] = {1.0, 2.0, 3.0};
    return first(wrong);
}
